--- a/res/slime_red.plist
+++ b/res/slime_red.plist
@@ -4,10 +4,10 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>zombie01</key>
+            <key>slime_yellow01</key>
             <dict>
                 <key>frame</key>
-                <string>{{30,0},{120,130}}</string>
+                <string>{{0,0},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -16,10 +16,10 @@
                 <string>{96,96}</string>
             </dict>
             
-            <key>zombie02</key>
+            <key>slime_yellow02</key>
             <dict>
                 <key>frame</key>
-                <string>{{150,0},{120,130}}</string>
+                <string>{{130,0},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -28,10 +28,10 @@
                 <string>{96,96}</string>
             </dict>
             
-            <key>zombie03</key>
+            <key>slime_yellow03</key>
             <dict>
                 <key>frame</key>
-                <string>{{270,0},{120,130}}</string>
+                <string>{{255,0},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -40,10 +40,10 @@
                 <string>{96,96}</string>
             </dict>
             
-            <key>zombie04</key>
+            <key>slime_yellow04</key>
             <dict>
                 <key>frame</key>
-                <string>{{390,0},{120,130}}</string>
+                <string>{{380,0},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -51,22 +51,10 @@
                 <key>sourceSize</key>
                 <string>{96,96}</string>
             </dict>
-              <key>zombie05</key>
+              <key>slime_yellow05</key>
             <dict>
                 <key>frame</key>
-                <string>{{0,130},{120,130}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceSize</key>
-                <string>{96,96}</string>
-            </dict>
-            
-            <key>zombie06</key>
-            <dict>
-                <key>frame</key>
-                <string>{{150,130},{120,130}}</string>
+                <string>{{0,65},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -75,10 +63,10 @@
                 <string>{96,96}</string>
             </dict>
             
-            <key>zombie07</key>
+            <key>slime_yellow06</key>
             <dict>
                 <key>frame</key>
-                <string>{{270,130},{120,130}}</string>
+                <string>{{130,65},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -87,10 +75,10 @@
                 <string>{96,96}</string>
             </dict>
             
-            <key>zombie08</key>
+            <key>slime_yellow07</key>
             <dict>
                 <key>frame</key>
-                <string>{{390,130},{120,130}}</string>
+                <string>{{255,65},{96,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -98,6 +86,67 @@
                 <key>sourceSize</key>
                 <string>{96,96}</string>
             </dict>
+            
+            <key>slime_yellow08</key>
+            <dict>
+                <key>frame</key>
+                <string>{{385,65},{96,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceSize</key>
+                <string>{96,96}</string>
+            </dict>
+            
+            <key>slime_yellow09</key>
+            <dict>
+                <key>frame</key>
+                <string>{{0,130},{96,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceSize</key>
+                <string>{96,96}</string>
+            </dict>
+            
+            <key>slime_yellow10</key>
+            <dict>
+                <key>frame</key>
+                <string>{{130,130},{96,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceSize</key>
+                <string>{96,96}</string>
+            </dict>
+            
+            <key>slime_yellow11</key>
+            <dict>
+                <key>frame</key>
+                <string>{{270,130},{96,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceSize</key>
+                <string>{96,96}</string>
+            </dict>
+            
+            <key>slime_yellow12</key>
+            <dict>
+                <key>frame</key>
+                <string>{{390,130},{96,70}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceSize</key>
+                <string>{96,96}</string>
+            </dict>
+
         </dict>
         <key>metadata</key>
         <dict>
